[package]
name = "sdmmc-spi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timestamp-source = "^0.1.3"
spin = "^0.9.4"
diskio = "^0.1.0"
bitfield = "^0.14.0"
size = "^0.4.1"
log = { version = "^0.4.17", default-features = false, optional = true }
defmt = { version = "^0.3.2", optional = true }

[features]
defmt-log = [ "defmt" ]
default = [ "log" ]
