[package]
name = "sdmmc-spi"
authors = ["Stanislav Kusovskyi <kusovsky95@gmail.com>"]
edition = "2021"
description = "SD/MMC Library written in Embedded Rust."
repository = "https://github.com/kusstas/sdmmc-spi"
documentation = "https://docs.rs/crate/sdmmc-spi"
categories = ["embedded", "hardware-support", "no-std"]
keywords = ["embedded-hal", "embedded-hal-driver", "sdmmc", "sdcard", "spi"]
version = "0.1.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
exclude = [
    ".vscode/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "^0.14.0"
defmt = "^0.3.2"
diskio = "^0.1.1"
embedded-hal = "^0.2.7"
size = { version = "^0.4.1", default-features = false }
switch-hal = "^0.4.0"
